--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link id="stylesheet" rel="stylesheet" type="text/css" href="css/style2.css">
     <meta name="description" content="This Website consist of Question Paper of Previous Year of Polytechnic Jammu 
      of Department Computer , Electronics & Communication,Office Management & Computer Application , Textile and MLT">
-     <meta name="keywords" content="gpfwjammu , Polytechnic, Jammu ">
-    <meta name="author " content="Kiranjeet kour">
+     <meta name="keywords" content="gpfwjammu,Polytechnic Jammu ">
+    
     
 
     <link rel="stylesheet" href="css/logo.css">
