--- a/html/computer_dep/1sem.html
+++ b/html/computer_dep/1sem.html
@@ -14,7 +14,7 @@
         <section class="class1">
          <div id="image_div">
              <img src="../../image/logo.jpg" alt="logo of this website" width="70vh" height="55vh">
-             <p1>JK polytechnic help</p1>
+             <p1>JK polytechnic Hub</p1>
         </section>
      
      </header>
