--- a/html/MLT/4sem.html
+++ b/html/MLT/4sem.html
@@ -15,7 +15,7 @@
          <div id="image_div">
             <img src="../../image/logo.jpg" alt="logo of this website"width="70vh" height="80vh">
 
-             <p1>JK polytechnic help</p1>
+             <p1>JK polytechnic Hub</p1>
         </section>
      
      </header>
