--- a/html/computer_dep/3sem.html
+++ b/html/computer_dep/3sem.html
@@ -13,7 +13,7 @@
     <header>
         <section class="class1">
          <div id="image_div">
-            <img src="../../image/logo.jpg" alt="logo of this website" >
+            <img src="../../image/logo.jpg" alt="logo of this website" width="70vh" height="80vh" >
 
              <p1>JK polytechnic Hub</p1>
         </section>
