--- a/html/computer_dep/3sem.html
+++ b/html/computer_dep/3sem.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3rd semester Previous year question paper</title>
+    <title>4th semester Previous year question paper</title>
     <link rel="stylesheet" href="../depLogo.css">
     <link rel="stylesheet" href="../depStyle.css">
    
@@ -13,7 +13,7 @@
     <header>
         <section class="class1">
          <div id="image_div">
-            <img src="../../image/logo.jpg" alt="logo of this website" width="70vh" height="80vh" >
+            <img src="../../image/logo.jpg" alt="logo of this website"width="70vh" height="80vh">
 
              <p1>JK polytechnic Hub</p1>
         </section>
@@ -25,8 +25,9 @@
             pdf of PQ of 2022
             <hr>
             <br>
-            <a href="">click here</a>
+            <a href="computer/3th-sem-Question_paper/3rd semester computer 2022.pdf">click here</a>
         </div>
+        
 
     </section>
 </main>     
